--- a/css/style.css
+++ b/css/style.css
@@ -169,9 +169,6 @@ address {
 
 .hero {
   background-color: #2e2f42;
-}
-
-.hero-container {
   padding: 188px 0;
 }
 
@@ -229,7 +226,6 @@ address {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
-  margin-bottom: 8px;
 }
 
 .benefits-list {
@@ -241,6 +237,10 @@ address {
 .benefits-item {
   width: calc((100% - 72px) / 4);
   gap: 24px;
+}
+
+.benefits-title {
+  margin-bottom: 8px;
 }
 
 .benefits-text {
@@ -313,16 +313,19 @@ address {
 }
 
 .title-app {
+  margin-bottom: 8px;
 }
 
 .list-our-portfolio {
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
+  column-gap: 24px;
+  row-gap: 48px;
 }
 
 .our-portfolio-item {
   width: calc((100% - 48px) / 3);
+  margin-bottom: 48px;
 }
 
 .portfolio-img {
