--- a/css/style.css
+++ b/css/style.css
@@ -273,10 +273,15 @@ address {
   gap: 24px;
 }
 
+.team-card-cointainer {
+  padding: 32px 0;
+}
+
 .team-list-item {
   background-color: #ffffff;
   width: calc((100% - 72px) / 4);
   margin-bottom: 32px;
+  border-radius: 0px 0px 4px 4px;
 }
 .team-img {
   margin-bottom: 32px;
